--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="xar" name="iiifstream">
-    <xmlproperty file="expath-pkg.xml"/>
-    <property name="project.version" value="${package(version)}"/>
-    <property name="project.app" value="iiifstream"/>
+
+    <property environment="env"/>
     <property name="build.dir" value="build"/>
+    <property file="local.build.properties"/>
+    <property file="build.properties"/>
+    <xmlproperty file="expath-pkg.xml.tmpl"/>
+
     <target name="xar">
         <mkdir dir="${build.dir}"/>
-        <zip basedir="." destfile="${build.dir}/${project.app}-${project.version}.xar" excludes="${build.dir}/*"/>
+        <copy file="expath-pkg.xml.tmpl" tofile="expath-pkg.xml" filtering="true" overwrite="true">
+            <filterset>
+                <filter token="project.version" value="${project.version}"/>
+                <filter token="project.title" value="${project.title}"/>
+                <filter token="project.abbrev" value="${project.abbrev}"/>
+                <filter token="project.name" value="${project.name}"/>
+                <filter token="project.processorversion" value="${project.processorversion}"/>
+            </filterset>
+        </copy>
+        <zip basedir="." destfile="${destfile}" excludes="${build.dir}/,${test.dir}/"/>
+    </target>
+
+    <target name="cleanup">
+      <delete dir="${test.dir}"/>
+      <delete dir="${build.dir}">
+          <include name="eXist-db-*.tar.bz2"/>
+          <exclude name="eXist-db-${project.processorversion}.tar.bz2"/>
+      </delete>
+    </target>
+
+    <target name="test" depends="cleanup, xar">
+      <get src="https://bintray.com/existdb/releases/download_file?file_path=eXist-db-${project.processorversion}.tar.bz2" dest="${build.dir}/eXist-db-${project.processorversion}.tar.bz2" skipexisting="true" />
+      <untar src="${build.dir}/eXist-db-${project.processorversion}.tar.bz2" dest="${test.dir}" compression="bzip2" />
+
+      <copy file="${destfile}" todir="${test.dir}/eXist-db-${project.processorversion}/autodeploy" />
     </target>
 </project>
